<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SignUp"
    tools:ignore="VisualLintBounds">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/ninja"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ninja"
        android:contentDescription="@string/ninja_fruit_based_tomato_graphic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sign_layout"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ninja">

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.316"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.316"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/underline_layout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_layout">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/empty_line"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/line"/>

    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="4dp"
        app:hintTextColor="@color/shadowD"
        android:textColorHint="@color/shadowD"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@color/white"
        app:cursorColor="@color/shadowD"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf ="@id/sign_layout"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLines="1"
            android:textColor="@color/primary"
            android:textColorHint="@color/shadowD"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dob_layout"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="4dp"
                app:hintTextColor="@color/shadowD"
                android:textColorHint="@color/shadowD"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxBackgroundColor="@color/white"
                app:cursorColor="@color/shadowD"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf ="@id/name_layout"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                android:layout_gravity="center">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob"
                    android:layout_width="350dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:maxLines="1"
                    android:textColor="@color/primary"
                    android:textColorHint="@color/shadowD"
                    android:inputType="number"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="4dp"
            app:hintTextColor="@color/shadowD"
            android:textColorHint="@color/shadowD"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/white"
            app:cursorColor="@color/shadowD"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf ="@id/dob_layout"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            android:layout_gravity="center">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLines="1"
                android:textColor="@color/primary"
                android:textColorHint="@color/shadowD"
                android:inputType="textEmailAddress"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="4dp"
            app:hintTextColor="@color/shadowD"
            android:textColorHint="@color/shadowD"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@color/white"
            app:cursorColor="@color/shadowD"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf ="@id/email_layout"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/shadowD"
            android:layout_gravity="center">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:maxLines="1"
                android:layout_width="350dp"
                android:layout_gravity="center"                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/primary"
                android:textColorHint="@color/shadowD"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_layout"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="4dp"
        app:hintTextColor="@color/shadowD"
        android:textColorHint="@color/shadowD"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@color/white"
        app:cursorColor="@color/shadowD"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf ="@id/password_layout"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/shadowD"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat"
            android:maxLines="1"
            android:layout_width="350dp"
            android:layout_gravity="center"                android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:textColor="@color/primary"
            android:textColorHint="@color/shadowD"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeat_layout"
            app:layout_constraintVertical_bias="0.071"
            tools:ignore="VisualLintButtonSize"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>